--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
     <!--styles-->
     <link rel="stylesheet" href="./css/styles.css" />
+     <link rel="stylesheet" href="css/main.min.css" />
   </head>
 
   <body>
