--- a/portfolio.html
+++ b/portfolio.html
@@ -28,22 +28,22 @@
           <span class="accent">Web</span>Studio</a
         >
         <ul class="header-menu list">
-          <li class="header-menu-item">
-            <a class="header-menu-link link " href="./index.html">Студія</a>
+          <li class="header-menu__item">
+            <a class="header-menu__link link " href="./index.html">Студія</a>
           </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link current" href="./portfolio.html"
+          <li class="header-menu__item">
+            <a class="header-menu__link link current" href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="#">Контакти</a>
+          <li class="header-menu__item">
+            <a class="header-menu__link link" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
       <ul class="contacts list">
-        <li class="contact-item">
-          <a class="contact-link link" href="mailto:info@devstudio.com"
+        <li class="contact__item">
+          <a class="contact__link link" href="mailto:info@devstudio.com"
             >
             <svg aria-label="лого почти" class="mail-logo">
               <use href="./img/sprite.svg#icon-envelope"></use>
@@ -51,8 +51,8 @@
             info@devstudio.com</a
           >
         </li>
-        <li class="contact-item">
-          <a class="contact-link link" href="tel:+380961111111">
+        <li class="contact__item">
+          <a class="contact__link link" href="tel:+380961111111">
  <svg aria-label="лого телефона" class="tel-logo">
               <use href="./img/sprite.svg#icon-Vector"
              ></use>
