--- a/index.html
+++ b/index.html
@@ -139,31 +139,31 @@
         </div>
         
       <!--section 3-->
-      <section class="doing secttion">
+      <section class="work secttion">
         <div class="container">
- <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="doing-menu list">
-          <li class="doing-item">
+ <h2 class="section__title">Чим ми займаємося</h2>
+        <ul class="work-menu list">
+          <li class="work__item">
             <img
-              class="doing-img"
+              class="work__img"
               src="./img/img1.jpg"
               alt="Людина працює за комп'ютером"
               width="370"
               height="294"
             />
           </li>
-          <li class="doing-item">
+          <li class="work__item">
             <img
-              class="doing-img"
+              class="work__img"
               src="./img/img2.jpg"
               alt="Людина працює за ноутбуком"
               width="370"
               height="294"
             />
           </li>
-          <li class="doing-item">
+          <li class="work__item">
             <img
-              class="doing-img"
+              class="work__img"
               src="./img/img3.jpg"
               alt="Людина дивиться на відтінки кольорів на планшеті"
               width="370"
@@ -177,18 +177,18 @@
       <!--section 4-->
       <section class="team secttion">
         <div class="container">
-   <h2 class="section-title">Наша команда</h2>
-        <ul class="photo-team list">
-          <li class="team-item">
+   <h2 class="section__title">Наша команда</h2>
+        <ul class="team-photo list">
+          <li class="team__item">
             <img
-              class="team-img"
+              class="team__img"
               src="./img/card-1.jpg"
               alt=" Фото Ігоря Дем'яненко"
               width="270"
               height="260"
             />
-            <h3 class="name">Ігор Дем'яненко</h3>
-            <p class="profession">Product Designer</p>
+            <h3 class="team-photo__name">Ігор Дем'яненко</h3>
+            <p class="team-photo__profession">Product Designer</p>
             <ul class="social-list list">
               <li class="social-list-item">
                 <a href="" class="social-list-link">
@@ -221,16 +221,16 @@
             </ul>
           </li>
 
-          <li class="team-item">
+          <li class="team__item">
             <img
-              class="team-img"
+              class="team__img"
               src="./img/card-2.jpg"
               alt="Фото Ольгі Рєпіной"
               width="270"
               height="260"
             />
-            <h3 class="name">Ольга Рєпіна</h3>
-            <p class="profession">Frontend Developer</p>
+            <h3 class="team-photo__name">Ольга Рєпіна</h3>
+            <p class="team-photo__profession">Frontend Developer</p>
                         <ul class="social-list list">
               <li class="social-list-item">
                 <a href="" class="social-list-link">
@@ -262,16 +262,16 @@
               </li>
             </ul>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
-              class="team-img"
+              class="team__img"
               src="./img/card-3.jpg"
               alt="Фото Миколи Тарасова"
               width="270"
               height="260"
             />
-            <h3 class="name">Микола Тарасов</h3>
-            <p class="profession">Marketing</p>
+            <h3 class="team-photo__name">Микола Тарасов</h3>
+            <p class="team-photo__profession">Marketing</p>
                         <ul class="social-list list">
               <li class="social-list-item">
                 <a href="" class="social-list-link">
@@ -303,16 +303,16 @@
               </li>
             </ul>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
-              class="team-img"
+              class="team__img"
               src="./img/card-4.jpg"
               alt="Фото Михайла Єрмакова"
               width="270"
               height="260"
             />
-            <h3 class="name">Михайло Єрмаков</h3>
-            <p class="profession">UI Designer</p>
+            <h3 class="team-photo__name">Михайло Єрмаков</h3>
+            <p class="team-photo__profession">UI Designer</p>
                         <ul class="social-list list">
               <li class="social-list-item">
                 <a href="" class="social-list-link">
@@ -351,7 +351,7 @@
       <!--section 5-->
       <section class="clients secttion">
         <div class="container">
-          <h2 class="section-title">Постійні клієнти</h2>
+          <h2 class="section__title">Постійні клієнти</h2>
        <ul class="clients-list list">
         <li class="clients-item">
           <a href="" class="clients-link">
